pull proxy composer

--- a/composer.json
+++ b/composer.json
@@ -72,8 +72,18 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
-        }
+        },
+        "secure-http": false
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://203.95.199.55:8081/repository/composer-proxy-i4/"
+        },
+        {
+            "repo.packagist.org": false
+        }
+    ]
 }
